# 3DTK

./: .clang-format  .gitattributes  .gitmodules  CMakeLists.txt  INSTALL.md  README.md
.github/workflows/: main.yml
doc/equivs/: control.debian.bookworm  control.debian.bullseye  control.debian.bullseye.ros  control.debian.buster.ros  control.debian.sid  control.noros  control.ubuntu.jammy  control.ubuntu.noble
include/calibration/: ArucoDetector.h  PArUcoDetector.h
include/preg6d/: cluster.h  util.h
include/sc_fixed/: sc_ICP.h  sc_ICP.icc  sc_ICPapx.h  sc_ICPminimizer.h  sc_Point.h  sc_Point.icc  sc_PtPair.h  sc_PtPair.icc  sc_fixed_converter.h  sc_fixed_math.h
include/sc_fixed_math/: sc_fixed_math.h  sc_fixed_sqrt.h~
include/sc_fixed_sqrt/: sc_fixed_sqrt.h
include/show/: dummygl.h  show_Boctree.h  viewcull.h
include/slam6d/: atomize.h  icp6D.h  icp6D.icc  lum6DeulerS.h  metaScan.h  subgraph_options.h
include/srr/: gapx6D.h  ghelix6DQ2.h  lboctree.h  lnnparams.h  simplereg.h
src/calibration/: ArucoDetector.cc  CCTagDetector.cc  CMakeLists.txt  PArUcoDetector.cc  detect.cc
src/peopleremover/: CMakeLists.txt  icp_peopleremover.cc
src/preg6d/: CMakeLists.txt  cluster.cc  planereg.cc  polyreg.cc
src/sc_fixed/: CMakeLists.txt  sc_ICP.cc  sc_ICPapx.cc  sc_fixed_converter.cc  sc_fixed_math.cc
src/sc_fixed_math/: CMakeLists.txt~  sc_fixed_math.cc  sc_fixed_math.cc~  sc_fixed_sqrt.cc~
src/sc_fixed_sqrt/: #CMakeLists.txt#  sc_fixed_sqrt.cc
src/show/: imshow.cc
src/slam6d/: BruteForceNotATree.cc  CMakeLists.txt  icp6D.cc  icpFixpoint.cc  metaScan.cc  (+4 more)
(+36 files in other folders)
